* 2007-10-29 - thorben.betten@open-xchange.com

 - Bugfix #9957: Fixed error message on exceeded quota when placing a copy
   into sent folder during message transport
 - Bugfix #9899: Re-building fetch item handlers if item order changes
   during a FETCH response from IMAP server

* 2007-10-23 - marcus.klein@open-xchange.com

 - Bugfix #9807: Removed throw of ServletException on a not catched Exception.

* 2007-10-22 - ben.pahne@open-xchange.com
  
 - Bugfix #9902: Admin gets not deleted during delete context

* 2007-10-18 - ben.pahne@open-xchange.com

 - Bugfix #9800: Remaining entries inside del table after context delete
 - Bugfix #9581: Delete of all user contacts during the delete user process
   was not working if an unbound contacts occured.

* 2007-10-18 - marcus.klein@open-xchange.com

 - Bugfix #9807: Catching all exceptions now in AJAX super servlet to prevent
   closed AJP sockets.
 - Bugfix #9804: Added mapping for charset x-unknown to US-ASCII.
 - Bugfix #9793: Added fallbacks if some UIDPLUS extensions are not supported.
 - Bugfix #9812: Fixed with fix for bug #9793.
 - Bugfix #9822: Surrounded all TimerTasks with catch statement to prevent
   dying OXTimer if an exception occurs.

* 2007-10-18 - martin.kauss@open-xchange.com

 - Fixed bug #9808. An update task failed because of a wrong where
   clause. This has been fixed.
   
 - Fixed bug #6335. Some characters caused problems while building XML.
   Now we are throwing an error in the calendar if those characters are
   found.
   
 - Fixed bug #7471. If an existing exception is deleted with the
   update method and the field delete_exception then this exeption
   was just marked as deleted exception without a real delete.
   This has been fixed.

 - Fixed bug #9599. By adding a new users the confirm message was
   deleted for existing users. This has been fixed.      

* 2007-10-17 - francisco.laguna@open-xchange.com
 - Bugfix 9061: Delete entries in del_infostore_documents to overwrite them